i64 vars